--- a/tarea1.html
+++ b/tarea1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link   rel="stylesheet" 
-            href="style-tarea.css"
+            href="style-tarea1.css"
             type="text/css">
 </head>
  
